--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="share" translatable="false">Поделиться приложением</string>
     <string name="support" translatable="false">Написать в поддержку</string>
     <string name="terms_of_use" translatable="false">Пользовательское соглашение</string>
+    <string name="yp_android_link">https://practicum.yandex.ru/android-developer/</string>
+    <string name="yp_email">cerj275@yandex.ru</string>
+    <string name="feedback_topic">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="feedback_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="terms_of_use_link">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="clear_search_text">Очистить поисковый запрос</string>
 </resources>
