--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="feedback_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="terms_of_use_link">https://yandex.ru/legal/practicum_offer/</string>
     <string name="clear_search_text">Очистить поисковый запрос</string>
+    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="refresh">Обновить</string>
+    <string name="nothing_found">Ничего не нашлось</string>
 </resources>
