--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,6 @@
     <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
     <string name="refresh">Обновить</string>
     <string name="nothing_found">Ничего не нашлось</string>
-    <string name="you_searched">Вы искали</string>
+    <string name="search_message">Вы искали</string>
     <string name="clear_history">Очистить историю</string>
 </resources>
