--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,12 @@
     <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
     <string name="favorites_tracks">Избранные треки</string>
     <string name="playlists">Плейлисты</string>
+    <string name="playlist_name">Название*</string>
+    <string name="playlist_description">Описание</string>
+    <string name="create">Создать</string>
+    <string name="title_dialog_new_playlist">Завершить создание плейлиста?</string>
+    <string name="message_dialog_new_playlist">Все не сохранненые данные будут потеряны</string>
+    <string name="cancel">Отмена</string>
+    <string name="finish">Завершить</string>
+    <string name="add_to_playlist">Добавить в плейлист</string>
 </resources>
