--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="cancel">Отмена</string>
     <string name="finish">Завершить</string>
     <string name="add_to_playlist">Добавить в плейлист</string>
+    <string name="playlist_created">"Плейлсит %1$s создан"</string>
+    <string name="track_contained">"Трек уже добавлен в плейлист %1$s"</string>
+    <string name="track_added">"Добавлено в плейлист %1$s"</string>
 </resources>
