--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,14 @@
     <string name="playlist_created">"Плейлсит %1$s создан"</string>
     <string name="track_contained">"Трек уже добавлен в плейлист %1$s"</string>
     <string name="track_added">"Добавлено в плейлист %1$s"</string>
+
+    <plurals name="number_of_tracks">
+        <item quantity="zero">%1$d треков</item>
+        <item quantity="one">%1$d трек</item>
+        <item quantity="two">%1$d трека</item>
+        <item quantity="few">%1$d трека</item>
+        <item quantity="many">%1$d треков</item>
+        <item quantity="other">%1$d треков</item>
+    </plurals>
+
 </resources>
